crates/markdown-neuraxis-syntax/src/snapshots/malformed/real_world_messy.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..443
  HEADING@0..26
    HASH@0..1 "#"
    TEXT@1..8 "Meeting"
    WHITESPACE@8..9 " "
    TEXT@9..14 "Notes"
    WHITESPACE@14..15 " "
    TEXT@15..19 "2024"
    DASH@19..20 "-"
    TEXT@20..22 "01"
    DASH@22..23 "-"
    TEXT@23..25 "15"
    NEWLINE@25..26 "\\n"
  PARAGRAPH@26..87
    LPAREN@26..27 "("
    TEXT@27..29 "no"
    WHITESPACE@29..30 " "
    TEXT@30..35 "space"
    WHITESPACE@35..36 " "
    TEXT@36..41 "after"
    WHITESPACE@41..42 " "
    HASH@42..43 "#"
    TEXT@43..44 ","
    WHITESPACE@44..45 " "
    TEXT@45..56 "technically"
    WHITESPACE@56..57 " "
    TEXT@57..60 "not"
    WHITESPACE@60..61 " "
    TEXT@61..62 "a"
    WHITESPACE@62..63 " "
    TEXT@63..70 "heading"
    WHITESPACE@70..71 " "
    TEXT@71..74 "per"
    WHITESPACE@74..75 " "
    TEXT@75..85 "CommonMark"
    RPAREN@85..86 ")"
    NEWLINE@86..87 "\\n"
  NEWLINE@87..88 "\\n"
  HEADING@88..103
    HASH@88..89 "#"
    HASH@89..90 "#"
    TEXT@90..96 "Action"
    WHITESPACE@96..97 " "
    TEXT@97..102 "Items"
    NEWLINE@102..103 "\\n"
  UNORDERED_LIST@103..230
    LIST_ITEM@103..136
      DASH@103..104 "-"
      WHITESPACE@104..105 " "
      CHECKBOX@105..108
        LBRACKET@105..106 "["
        WHITESPACE@106..107 " "
        RBRACKET@107..108 "]"
      WHITESPACE@108..109 " "
      PARAGRAPH@109..136
        TEXT@109..113 "Call"
        WHITESPACE@113..114 " "
        WIKILINK@114..135
          LBRACKET@114..115 "["
          LBRACKET@115..116 "["
          TEXT@116..120 "John"
          RBRACKET@120..121 "]"
          WHITESPACE@121..122 " "
          TEXT@122..127 "about"
          WHITESPACE@127..128 " "
          TEXT@128..135 "project"
        NEWLINE@135..136 "\\n"
    LIST_ITEM@136..157
      DASH@136..137 "-"
      WHITESPACE@137..138 " "
      CHECKBOX@138..141
        LBRACKET@138..139 "["
        TEXT@139..140 "x"
        RBRACKET@140..141 "]"
      WHITESPACE@141..142 " "
      PARAGRAPH@142..157
        TEXT@142..148 "Review"
        WHITESPACE@148..149 " "
        TEXT@149..151 "PR"
        WHITESPACE@151..152 " "
        HASH@152..153 "#"
        TEXT@153..156 "123"
        NEWLINE@156..157 "\\n"
    LIST_ITEM@157..178
      STAR@157..158 "*"
      WHITESPACE@158..159 " "
      PARAGRAPH@159..178
        TEXT@159..164 "mixed"
        WHITESPACE@164..165 " "
        TEXT@165..171 "bullet"
        WHITESPACE@171..172 " "
        TEXT@172..177 "style"
        NEWLINE@177..178 "\\n"
    LIST_ITEM@178..230
      PLUS@178..179 "+"
      WHITESPACE@179..180 " "
      PARAGRAPH@180..194
        TEXT@180..187 "another"
        WHITESPACE@187..188 " "
        TEXT@188..193 "style"
        NEWLINE@193..194 "\\n"
      WHITESPACE@194..196 "  "
      UNORDERED_LIST@196..230
        LIST_ITEM@196..229
          DASH@196..197 "-"
          WHITESPACE@197..198 " "
          PARAGRAPH@198..229
            TEXT@198..204 "nested"
            WHITESPACE@204..205 " "
            TEXT@205..208 "but"
            WHITESPACE@208..209 " "
            TEXT@209..221 "inconsistent"
            WHITESPACE@221..222 " "
            TEXT@222..228 "indent"
            NEWLINE@228..229 "\\n"
        NEWLINE@229..230 "\\n"
  BLOCK_QUOTE@230..257
    GT@230..231 ">"
    WHITESPACE@231..232 " "
    TEXT@232..236 "half"
    WHITESPACE@236..237 " "
    TEXT@237..245 "finished"
    WHITESPACE@245..246 " "
    TEXT@246..256 "blockquote"
    NEWLINE@256..257 "\\n"
  PARAGRAPH@257..282
    TEXT@257..261 "that"
    WHITESPACE@261..262 " "
    TEXT@262..271 "continues"
    WHITESPACE@271..272 " "
    TEXT@272..279 "without"
    WHITESPACE@279..280 " "
    GT@280..281 ">"
    NEWLINE@281..282 "\\n"
  NEWLINE@282..283 "\\n"
  PARAGRAPH@283..314
    TEXT@283..287 "Some"
    WHITESPACE@287..288 " "
    AUTOLINK@288..291
      LT@288..289 "<"
      TEXT@289..290 "b"
      GT@290..291 ">"
    TEXT@291..295 "html"
    WHITESPACE@295..296 " "
    TEXT@296..302 "that's"
    WHITESPACE@302..303 " "
    TEXT@303..306 "not"
    WHITESPACE@306..307 " "
    TEXT@307..313 "closed"
    NEWLINE@313..314 "\\n"
  NEWLINE@314..315 "\\n"
  FENCED_CODE@315..443
    BACKTICK@315..316 "`"
    BACKTICK@316..317 "`"
    BACKTICK@317..318 "`"
    TEXT@318..324 "python"
    NEWLINE@324..325 "\\n"
    TEXT@325..328 "def"
    WHITESPACE@328..329 " "
    TEXT@329..335 "broken"
    LPAREN@335..336 "("
    RPAREN@336..337 ")"
    COLON@337..338 ":"
    NEWLINE@338..339 "\\n"
    WHITESPACE@339..343 "    "
    HASH@343..344 "#"
    WHITESPACE@344..345 " "
    TEXT@345..349 "oops"
    WHITESPACE@349..350 " "
    TEXT@350..356 "forgot"
    WHITESPACE@356..357 " "
    TEXT@357..359 "to"
    WHITESPACE@359..360 " "
    TEXT@360..365 "close"
    WHITESPACE@365..366 " "
    TEXT@366..369 "the"
    WHITESPACE@369..370 " "
    TEXT@370..375 "fence"
    NEWLINE@375..376 "\\n"
    NEWLINE@376..377 "\\n"
    TEXT@377..383 "Random"
    WHITESPACE@383..384 " "
    LBRACKET@384..385 "["
    LBRACKET@385..386 "["
    TEXT@386..394 "wikilink"
    PIPE@394..395 "|"
    TEXT@395..399 "with"
    WHITESPACE@399..400 " "
    TEXT@400..404 "pipe"
    RBRACKET@404..405 "]"
    RBRACKET@405..406 "]"
    WHITESPACE@406..407 " "
    TEXT@407..410 "and"
    WHITESPACE@410..411 " "
    LBRACKET@411..412 "["
    LBRACKET@412..413 "["
    TEXT@413..419 "broken"
    WHITESPACE@419..420 " "
    TEXT@420..423 "one"
    NEWLINE@423..424 "\\n"
    NEWLINE@424..425 "\\n"
    DASH@425..426 "-"
    DASH@426..427 "-"
    DASH@427..428 "-"
    NEWLINE@428..429 "\\n"
    NEWLINE@429..430 "\\n"
    TEXT@430..434 "TODO"
    COLON@434..435 ":"
    WHITESPACE@435..436 " "
    TEXT@436..439 "fix"
    WHITESPACE@439..440 " "
    LBRACKET@440..441 "["
    LBRACKET@441..442 "["
    NEWLINE@442..443 "\\n"
