crates/markdown-neuraxis-syntax/src/snapshots/malformed/unclosed_constructs.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..154
  HEADING@0..14
    HASH@0..1 "#"
    WHITESPACE@1..2 " "
    TEXT@2..7 "Draft"
    WHITESPACE@7..8 " "
    TEXT@8..13 "notes"
    NEWLINE@13..14 "\\n"
  NEWLINE@14..15 "\\n"
  PARAGRAPH@15..51
    TEXT@15..20 "Check"
    WHITESPACE@20..21 " "
    TEXT@21..24 "out"
    WHITESPACE@24..25 " "
    WIKILINK@25..50
      LBRACKET@25..26 "["
      LBRACKET@26..27 "["
      TEXT@27..31 "this"
      WHITESPACE@31..32 " "
      TEXT@32..36 "page"
      WHITESPACE@36..37 " "
      TEXT@37..40 "for"
      WHITESPACE@40..41 " "
      TEXT@41..45 "more"
      WHITESPACE@45..46 " "
      TEXT@46..50 "info"
    NEWLINE@50..51 "\\n"
  NEWLINE@51..52 "\\n"
  PARAGRAPH@52..86
    TEXT@52..56 "Also"
    WHITESPACE@56..57 " "
    TEXT@57..60 "see"
    WHITESPACE@60..61 " "
    INLINE@61..85
      LBRACKET@61..62 "["
      TEXT@62..68 "broken"
      WHITESPACE@68..69 " "
      TEXT@69..73 "link"
      WHITESPACE@73..74 " "
      TEXT@74..81 "without"
      WHITESPACE@81..82 " "
      TEXT@82..85 "url"
    NEWLINE@85..86 "\\n"
  NEWLINE@86..87 "\\n"
  PARAGRAPH@87..112
    TEXT@87..91 "Some"
    WHITESPACE@91..92 " "
    STAR@92..93 "*"
    TEXT@93..97 "half"
    WHITESPACE@97..98 " "
    TEXT@98..102 "done"
    WHITESPACE@102..103 " "
    TEXT@103..111 "emphasis"
    NEWLINE@111..112 "\\n"
  NEWLINE@112..113 "\\n"
  PARAGRAPH@113..137
    TEXT@113..116 "And"
    WHITESPACE@116..117 " "
    BACKTICK@117..118 "`"
    TEXT@118..126 "unclosed"
    WHITESPACE@126..127 " "
    TEXT@127..131 "code"
    WHITESPACE@131..132 " "
    TEXT@132..136 "span"
    NEWLINE@136..137 "\\n"
  NEWLINE@137..138 "\\n"
  PARAGRAPH@138..154
    TEXT@138..142 "More"
    WHITESPACE@142..143 " "
    TEXT@143..147 "text"
    WHITESPACE@147..148 " "
    TEXT@148..152 "here"
    DOT@152..153 "."
    NEWLINE@153..154 "\\n"
