crates/markdown-neuraxis-syntax/src/snapshots/malformed/whitespace_only_line.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..23
  PARAGRAPH@0..11
    TEXT@0..5 "First"
    WHITESPACE@5..6 " "
    TEXT@6..10 "line"
    NEWLINE@10..11 "\\n"
  NEWLINE@11..12 "\\n"
  PARAGRAPH@12..23
    TEXT@12..17 "Third"
    WHITESPACE@17..18 " "
    TEXT@18..22 "line"
    NEWLINE@22..23 "\\n"
